--- a/docs/native.adoc
+++ b/docs/native.adoc
@@ -38,7 +38,7 @@ Within the `pom.xml` is the declaration for the Quarkus Maven plugin which conta
 
 We use a profile because, you will see very soon, packaging the native image takes a few seconds. However, this compilation time is only incurred _once_, as opposed to _every_ time the application starts, which is the case with other approaches for building and executing JARs.
 
-Create a native executable by using the **Build Native App** link on the right:
+Create a native executable by using the **che: 04. Build Native App** task:
 
 image::cmd-native.png[livecoding, 700]
 
@@ -53,7 +53,7 @@ The output of the native build is a native Linux binary, which you can see using
 
 [source,sh,role="copypaste"]
 ----
-readelf -h $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs/target/*-runner
+readelf -h target/*-runner
 ----
 
 you’ll see:
@@ -61,7 +61,7 @@ you’ll see:
 [source,none]
 ----
 ELF Header:
-  Magic:   7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00
+  Magic:   7f 45 4c 46 02 01 01 00 00 00 00 00 00 00 00 00 
   Class:                             ELF64
   Data:                              2's complement, little endian
   Version:                           1 (current)
@@ -70,7 +70,16 @@ ELF Header:
   Type:                              EXEC (Executable file)
   Machine:                           Advanced Micro Devices X86-64
   Version:                           0x1
-  ....
+  Entry point address:               0x4051f0
+  Start of program headers:          64 (bytes into file)
+  Start of section headers:          41322472 (bytes into file)
+  Flags:                             0x0
+  Size of this header:               64 (bytes)
+  Size of program headers:           56 (bytes)
+  Number of program headers:         9
+  Size of section headers:           64 (bytes)
+  Number of section headers:         31
+  Section header string table index: 30
 ----
 
 It’s a binary that can only run on Linux, but as you’ll see in a moment, this native executable starts up very fast and takes up little memory.
@@ -81,7 +90,7 @@ Since our environment here is Linux, you can _just run it_. In the terminal, run
 
 [source,sh,role="copypaste"]
 ----
-$CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs/target/people-1.0-SNAPSHOT-runner -Dquarkus.http.port=8081 # <1>
+target/people-1.0-SNAPSHOT-runner -Dquarkus.http.port=8081 # <1>
 ----
 <1> We use port `8081` here to avoid conflicting with our already-running development mode Quarkus app.
 
@@ -91,10 +100,10 @@ Notice the amazingly fast startup time:
 
 [source,none,role="copypaste"]
 ----
-INFO  [io.quarkus] (main) people 1.0-SNAPSHOT native (powered by Quarkus xx.xx.xx) started in 0.019s. Listening on: http://0.0.0.0:8081
+INFO  [io.quarkus] (main) people 1.0-SNAPSHOT native (powered by Quarkus 2.13.7.Final-redhat-00003) started in 0.023s. Listening on: http://0.0.0.0:8081
 ----
 
-That's 19 milliseconds to start up.
+That's *23* milliseconds to start up.
 
 And extremely low memory usage as reported by the Linux `ps` utility. While the app is running, open another Terminal and run:
 
@@ -107,10 +116,10 @@ You should see something like:
 [source,none]
 ----
     PID   RSS COMMAND
-   1120 37900 /projects/quarkus-workshop-m1m2-labs/target/people-1.0-SNAPSHOT-runner -Dquarkus.http.port=8081
+   8222 41288 target/people-1.0-SNAPSHOT-runner -Dquarkus.http.port=8081
 ----
 
-This shows that our process is taking around 37 MB of memory (https://en.wikipedia.org/wiki/Resident_set_size[Resident Set Size^], or RSS). Pretty compact!
+This shows that our process is taking around 41 MB of memory (https://en.wikipedia.org/wiki/Resident_set_size[Resident Set Size^], or RSS). Pretty compact!
 
 [NOTE]
 ====
